--- a/StorageDurationAndLifetime/StorageDurationAndLifetime.vcxproj
+++ b/StorageDurationAndLifetime/StorageDurationAndLifetime.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b9252859-246f-4405-a65c-fbf9e58a620c}</ProjectGuid>
-    <RootNamespace>RaylibDemo</RootNamespace>
+    <ProjectGuid>{6a5e9aa6-eb87-4804-b156-3a44386aeed1}</ProjectGuid>
+    <RootNamespace>StorageDurationAndLifetime</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,28 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Grid.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="TapperGameState.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="GameState.h" />
-    <ClInclude Include="Grid.h" />
-    <ClInclude Include="MathUtils.h" />
-    <ClInclude Include="TapperGameState.h" />
-    <ClInclude Include="Vector2Int.h" />
+    <ClInclude Include="Sentinel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="..\packages\raylib.4.2.0.2\build\native\raylib.targets" Condition="Exists('..\packages\raylib.4.2.0.2\build\native\raylib.targets')" />
   </ImportGroup>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\raylib.4.2.0.2\build\native\raylib.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\raylib.4.2.0.2\build\native\raylib.targets'))" />
-  </Target>
 </Project>
