Patron states for Drinking/Waiting/Knockback

--- a/RaylibDemo/RaylibDemo.vcxproj
+++ b/RaylibDemo/RaylibDemo.vcxproj
@@ -149,6 +149,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="MathUtils.h" />
