--- a/RaylibDemo/RaylibDemo.vcxproj.filters
+++ b/RaylibDemo/RaylibDemo.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="Patron.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
